# budget-machine

./: .coveragerc  .coveragerc.bankbridge  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  Tiltfile  buf.gen.yaml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  skaffold.yaml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0d74380f2dbb_timescaledb_migration.py  3999786d4d84_initial_schema.py  7c6d5e37daf0_add_indexes.py  84d4d5b5f9e2_transaction_refactor.py  8d4fb5d8f3de_initial_schema.py  b103c71929de_initial_schema_timescale.py  b7c93f4d8ea4_add_base_currency_to_accounts.py  c3cf30754da7_add_bank_tokens.py  (+5 more)
app/: __init__.py  crud.py  currency.py  database.py  main.py  models.py  notifications.py  oauth.py  schemas.py  security.py  tasks.py  telegram_bot.py  vault.py
backend/: Dockerfile  requirements-dev.txt
docs/: deployment.md  examples.md
env/: .env.example
frontend/: manifest.webmanifest  sw.js  tailwind.config.cjs
kafka/: debezium-postgres.json
monitoring/: grafana_dashboard.json
proto/: ledger.proto
tests/: conftest.py  test_accounts.py  test_analytics.py  test_banks.py  test_bot.py  test_categories.py  test_currency.py  test_goals.py  test_jobs.py  test_notifications.py  test_oauth.py  test_push.py  test_recurring.py  test_tokens.py  test_transactions.py  test_users.py
web/: next.config.ts  package-lock.json  tailwind.config.ts
(+240 files in other folders)
