[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = 'py312'
line-length = 88

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[project]
name = "budget-machine"
version = "0.1.0"
requires-python = ">=3.12"

[project.entry-points."bank_bridge.connectors"]
tinkoff = "services.bank_bridge.connectors.tinkoff:TinkoffConnector"
sber = "services.bank_bridge.connectors.sber:SberConnector"
gazprom = "services.bank_bridge.connectors.gazprom:GazpromConnector"
alfa = "services.bank_bridge.connectors.alfa:AlfaConnector"
vtb = "services.bank_bridge.connectors.vtb:VTBConnector"

